--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,14 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
+
+html,
+body,
+:root {
+  height: 100%;
+  background: var(--foreground);
+  color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  margin:0;
+  padding: 0;
 }
